# graphql

./: Cargo.toml  LICENSE  README.md
assets/: deploy.ps1  deploy.sh  wmb-graphql.service
src/: main.rs
